# neoboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch_win_dependencies.ps1
src/: main.cpp
src/core/: wire.cpp  wire.h
src/ui/: window.cpp  window.h
